Fixing few styling issues on mobile Fix issue after rebase where wrong class was passed Creating a default option on submission options, so older completions get new interface

--- a/app/components/cpd_course_list_component/cpd_course_list_component.scss
+++ b/app/components/cpd_course_list_component/cpd_course_list_component.scss
@@ -8,9 +8,11 @@
     span {
       margin: 0;
       z-index: 1;
+      background-color: $white;
+      padding-right: 2px;
     }
     
-    &::before {
+    &::after {
       content: '';
       position: absolute;
       top: 50%;
